...
          showUnselectedLabels: true,
          iconSize: 25,
          type: BottomNavigationBarType.fixed,
          selectedFontSize: 12,
          unselectedFontSize: 12,
          items: const [
            BottomNavigationBarItem(icon: Icon(Icons.home), label: 'Home'),
            BottomNavigationBarItem(icon: Icon(Icons.book), label: 'Recipes'),
            BottomNavigationBarItem(
                icon: Icon(Icons.food_bank), label: 'Donations'),
            BottomNavigationBarItem(
                icon: Icon(Icons.bar_chart), label: 'Statistics'),
          ],
        ),
        Positioned(
          left: width * 0.5 - 30,
...
