...
              alignment: Alignment.topRight,
              child: Padding(
              padding: const EdgeInsets.only(right: 8.0, top: 4.0, bottom: 4.0),
              child: ElevatedButton.icon(
                onPressed: _showFilterDialog,
                icon: Icon(Icons.filter_alt_rounded, color: Colors.white, size: 20.0),
                label: Text('Filter', style: TextStyle(color: Colors.white)),
                style: ElevatedButton.styleFrom(
                backgroundColor: Colors.green,
                padding: EdgeInsets.symmetric(horizontal: 16.0, vertical: 8.0),
                ),
              ),
              ),
...
