...
            }
          },
        ),
        title: Text(
          _isRecreateMode
              ? '${_selectedItems.length} Items selected'
              : 'Food History',
          style: TextStyle(
            fontSize: 20,
            fontWeight: FontWeight.bold,
            letterSpacing: 1.2,
            color: theme.appBarTheme.titleTextStyle?.color ?? Colors.white,
          ),
...
